--- a/catálogo.html
+++ b/catálogo.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frida Beauty Shop</title>
+    <link rel="stylesheet" href="./CSS/bootstrap.css">
     <link rel="stylesheet" href="./CSS/index.css">
 
 
@@ -42,77 +43,83 @@
             </li>
         </ul> 
     </div>
-<main class="container">
-    <section class="titulo">
-        <article>
-            <h1>Capilar</h1>
-        </article>
-    </section>
-    <section>
-        <figure>
-            <img src="./img/Capilar1.png" alt="">
-        </figure>
-        <article>
-            <h2>Título</h2>
-            <p>párrafo</p>
-        </article>
-    </section>
-    <section>
-        <figure>
-            <img src="./img/Capilar2.png" alt="">
-        </figure>
-        <article>
-            <h2>Título</h2>
-            <p>párrafo</p>
-        </article>
-    </section>
-    <section class="titulo">
-        <article>
-            <h1>Maquillaje</h1>
-        </article>
-    </section>
-    <section>
-        <figure>
-            <img src="./img/Maquillaje1.png" alt="">
-        </figure>
-        <article>
-            <h2>Título</h2>
-            <p>párrafo</p>
-        </article>
-    </section>
-    <section>
-        <figure>
-            <img src="./img/Maquillaje2.png" alt="">
-        </figure>
-        <article>
-            <h2>Título</h2>
-            <p>párrafo</p>
-        </article>
-    </section>
-    <section class="titulo">
-        <article>
-            <h1>Cuidado para la piel</h1>
-        </article>
-    </section>
-    <section>
-        <figure>
-            <img src="./img/Cuidado para la piel1.png" alt="">
-        </figure>
-        <article>
-            <h2>Título</h2>
-            <p>párrafo</p>
-        </article>
-    </section>
-    <section>
-        <figure>
-            <img src="./img/Cuidado para la piel2.png" alt="">
-        </figure>
-        <article>
-            <h2>Título</h2>
-            <p>párrafo</p>
-        </article>
-    </section>
-</main>
+    <main class="container">
+        <section class="titulo">
+            <article>
+                <h1>Capilar</h1>
+            </article>
+        </section>
+        <section class="linea1">
+            <section>
+                <figure>
+                    <img src="./img/Capilar1.png" class="catalogo" alt="">
+                </figure>
+                <article>
+                    <h2>Título</h2>
+                    <p>párrafo</p>
+                </article>
+            </section>
+            <section>
+                <figure>
+                    <img src="./img/Capilar2.png" class="catalogo" alt="">
+                </figure>
+                <article>
+                    <h2>Título</h2>
+                    <p>párrafo</p>
+                </article>
+            </section>
+        </section>
+        <section class="titulo">
+            <article>
+                <h1>Maquillaje</h1>
+            </article>
+        </section>
+        <section class="linea1">
+            <section>
+                <figure>
+                    <img src="./img/Maquillaje1.png" class="catalogo" alt="">
+                </figure>
+                <article>
+                    <h2>Título</h2>
+                    <p>párrafo</p>
+                </article>
+            </section>
+            <section>
+                <figure>
+                    <img src="./img/Maquillaje2.png" class="catalogo" alt="">
+                </figure>
+                <article>
+                    <h2>Título</h2>
+                    <p>párrafo</p>
+                </article>
+            </section>
+        </section>
+        <section class="titulo">
+            <article>
+                <h1>Cuidado para la piel</h1>
+            </article>
+        </section>
+        <section class="linea1">
+            <section>
+                <figure>
+                    <img src="./img/Cuidado para la piel1.png" class="catalogo" alt="">
+                </figure>
+                <article>
+                    <h2>Título</h2>
+                    <p>párrafo</p>
+                </article>
+            </section>
+            <section>
+                <figure>
+                    <img src="./img/Cuidado para la piel2.png" class="catalogo" alt="">
+                </figure>
+                <article>
+                    <h2>Título</h2>
+                    <p>párrafo</p>
+                </article>
+            </section>
+        </section>
+    </main>
 <footer>
     <section class="piedepacenter">
         <section class="linea2">
@@ -157,5 +164,6 @@
     </div>
 </section>
 </footer>
+<script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
