--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frida Beauty Shop</title>
+    <link rel="stylesheet" href="./CSS/bootstrap.css">
     <link rel="stylesheet" href="./CSS/index.css">
 
-    
-</head> 
+
+</head>
 <body>
     <header>
         <nav class="navbar container">
@@ -43,7 +44,7 @@
         </ul> 
     </div>
     <div>
-        <section id="banner">
+        <section id="banner container">
             <img src="./img/Banner.png" alt="">
         </section>
     </div>
@@ -120,5 +121,6 @@
     </div>
 </section>
 </footer>
+<script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
