se ajusta responsive

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
     <div>
         <ul class="menu">
             <li class="__menu">
-                <a href="index.html">INICIO</a>
+                <a class="__menu" href="index.html">INICIO</a>
             </li>
             <li class="__menu">
-                <a href="nosotros.html">NOSOTROS</a>
+                <a class="__menu" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="__menu">
-                <a href="catálogo.html">CATÁLOGO</a>
+                <a class="__menu" href="catálogo.html">CATÁLOGO</a>
             </li>
             <li class="__menu">
-                <a href="tiendas.html">TIENDAS</a>
+                <a class="__menu" href="tiendas.html">TIENDAS</a>
             </li>
             <li class="__menu">
-                <a href="contacto.html">CONTACTO</a>
+                <a class="__menu" href="contacto.html">CONTACTO</a>
             </li>
         </ul> 
     </div>
-    <div>
-        <section id="banner container">
-            <img src="./img/Banner.png" alt="">
+    <div id="banner">
+        <section>
+            <img src="./img/Banner.png" class="banner"  alt="">
         </section>
     </div>
     <main class="container">
@@ -59,20 +59,20 @@
         <section class="linea1">
             <section>
                 <figure>
-                    <img src="./img/Promoción 1.jpg" alt="">
+                    <img src="./img/Promoción 1.jpg" class="imglinea1" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>$80.000</strong></h2>
+                    <p>Kit de brochas profesional X 18 unidades</p>
                 </article>
             </section>
             <section>
                 <figure>
-                    <img src="./img/Promoción 2.png" alt="">
+                    <img src="./img/Promoción 2.jpg" class="imglinea1" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <P>párrafo</P>
+                    <h2><strong>$20.000</strong></h2>
+                    <P>Sombra para entradas</P>
                 </article>
             </section>
         </section>
@@ -80,7 +80,7 @@
 <footer>
     <section class="piedepacenter">
         <section class="linea2">
-            <h3>Centro de ayuda</h3>
+            <h3><strong>Centro de ayuda</strong></h3>
             <ul>
                 <li class="piedepa">Aviso de privacidad</li>
                 <li class="piedepa">Preguntas frecuentes</li>
@@ -88,7 +88,7 @@
             </ul>
         </section>
         <section class="linea2">
-            <h3>Contacto</h3>
+            <h3><strong>Contacto</strong> </h3>
             <nav>
                 <ul>
                     <li class="piedepa">contacto</li>
@@ -106,7 +106,7 @@
             </nav>
         </section>
         <section class="linea2">
-            <h3>Medios de pago</h3>
+            <h3><strong>Medios de pago</strong></h3>
             <article>
                 <figure><img src="./img/American.png" alt=""></figure>
                 <figure><img src="./img/Diners.png" alt=""></figure>
