--- a/tiendas.html
+++ b/tiendas.html
@@ -27,19 +27,19 @@
     <div>
         <ul class="menu">
             <li class="__menu">
-                <a href="index.html">INICIO</a>
+                <a class="__menu" href="index.html">INICIO</a>
             </li>
             <li class="__menu">
-                <a href="nosotros.html">NOSOTROS</a>
+                <a class="__menu" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="__menu">
-                <a href="catálogo.html">CATÁLOGO</a>
+                <a class="__menu" href="catálogo.html">CATÁLOGO</a>
             </li>
             <li class="__menu">
-                <a href="tiendas.html">TIENDAS</a>
+                <a class="__menu" href="tiendas.html">TIENDAS</a>
             </li>
             <li class="__menu">
-                <a href="contacto.html">CONTACTO</a>
+                <a class="__menu" class="__menu" href="contacto.html">CONTACTO</a>
             </li>
         </ul> 
     </div>
@@ -51,10 +51,10 @@
         </section>
         <section class="descripcion">
             <article>
-                <h1>Bogotá</h1>
-                <h2>Barrio Bolivia</h2>
+                <h1><strong>Bogotá</strong></h1>
+                <h2><strong>Barrio Bolivia</strong></h2>
                 <p>Carrera 109a # 82-35 Primer piso</p>
-                <h2>Horario</h2>
+                <h2><strong>Horario</strong></h2>
                 <p>Lunes a Sábado 10 am - 7 pm</p>
                 <p>Domingo 10am - 6pm</p>
             </article>
@@ -66,10 +66,10 @@
         </section>
         <section class="descripcion">
             <article>
-                <h1>Bogotá</h1>
-                <h2>Barrio Gran Granada</h2>
+                <h1><strong>Bogotá</strong></h1>
+                <h2><strong>Barrio Gran Granada</strong></h2>
                 <p>Calle 78c # 130-55 Local 1</p>
-                <h2>Horario</h2>
+                <h2><strong>Horario</strong></h2>
                 <p>Lunes a Sábado 10 am - 7 pm</p>
                 <p>Festivos estamos cerrados</p>
             </article>
@@ -83,7 +83,7 @@
     <footer>
         <section class="piedepacenter">
             <section class="linea2">
-                <h3>Centro de ayuda</h3>
+                <h3><strong>Centro de ayuda</strong></h3>
                     <ul>
                         <li class="piedepa">Aviso de privacidad</li>
                         <li class="piedepa">Preguntas frecuentes</li>
@@ -91,7 +91,7 @@
                     </ul>
             </section>
             <section class="linea2">
-                <h3>Contacto</h3>
+                <h3><strong>Contacto</strong></h3>
                 <nav>
                     <ul>
                         <li class="piedepa">contacto</li>
@@ -109,7 +109,7 @@
                 </nav>
             </section>
             <section class="linea2">
-                <h3>Medios de pago</h3>
+                <h3><strong>Medios de pago</strong></h3>
                 <article>
                     <figure><img src="./img/American.png" alt=""></figure>
                     <figure><img src="./img/Diners.png" alt=""></figure>
