--- a/catálogo.html
+++ b/catálogo.html
@@ -27,19 +27,19 @@
     <div>
         <ul class="menu">
             <li class="__menu">
-                <a href="index.html">INICIO</a>
+                <a class="__menu" href="index.html">INICIO</a>
             </li>
             <li class="__menu">
-                <a href="nosotros.html">NOSOTROS</a>
+                <a class="__menu" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="__menu">
-                <a href="catálogo.html">CATÁLOGO</a>
+                <a class="__menu" href="catálogo.html">CATÁLOGO</a>
             </li>
             <li class="__menu">
-                <a href="tiendas.html">TIENDAS</a>
+                <a class="__menu" href="tiendas.html">TIENDAS</a>
             </li>
             <li class="__menu">
-                <a href="contacto.html">CONTACTO</a>
+                <a class="__menu" href="contacto.html">CONTACTO</a>
             </li>
         </ul> 
     </div>
@@ -55,8 +55,8 @@
                     <img src="./img/Capilar1.png" class="catalogo" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>COP $30.000</strong></h2>
+                    <p>Desenredante termoprotector</p>
                 </article>
             </section>
             <section>
@@ -64,8 +64,8 @@
                     <img src="./img/Capilar2.png" class="catalogo" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>COP $40.000</strong></h2>
+                    <p>Tónico revitalizante milagro herbal</p>
                 </article>
             </section>
         </section>
@@ -80,8 +80,8 @@
                     <img src="./img/Maquillaje1.png" class="catalogo" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>COP $25.000</strong></h2>
+                    <p>Paleta de sombras dreamy</p>
                 </article>
             </section>
             <section>
@@ -89,8 +89,8 @@
                     <img src="./img/Maquillaje2.png" class="catalogo" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>COP $45.000</strong></h2>
+                    <p>Paleta de sombras perfect mix</p>
                 </article>
             </section>
         </section>
@@ -105,8 +105,8 @@
                     <img src="./img/Cuidado para la piel1.png" class="catalogo" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>COP $30.000</strong></h2>
+                    <p>Suero facial vitamina C</p>
                 </article>
             </section>
             <section>
@@ -114,8 +114,8 @@
                     <img src="./img/Cuidado para la piel2.png" class="catalogo" alt="">
                 </figure>
                 <article>
-                    <h2>Título</h2>
-                    <p>párrafo</p>
+                    <h2><strong>COP $18.000 C/U</strong></h2>
+                    <p>Tónico facial</p>
                 </article>
             </section>
         </section>
@@ -123,7 +123,7 @@
 <footer>
     <section class="piedepacenter">
         <section class="linea2">
-            <h3>Centro de ayuda</h3>
+            <h3><strong>Centro de ayuda</strong></h3>
             <ul>
                 <li class="piedepa">Aviso de privacidad</li>
                 <li class="piedepa">Preguntas frecuentes</li>
@@ -131,7 +131,7 @@
             </ul>
         </section>
         <section class="linea2">
-            <h3>Contacto</h3>
+            <h3><strong>Contacto</strong></h3>
             <nav>
                 <ul>
                     <li class="piedepa">contacto</li>
@@ -149,7 +149,7 @@
             </nav>
         </section>
         <section class="linea2">
-            <h3>Medios de pago</h3>
+            <h3><strong>Medios de pago</strong></h3>
             <article>
                 <figure><img src="./img/American.png" alt=""></figure>
                 <figure><img src="./img/Diners.png" alt=""></figure>
