--- a/contacto.html
+++ b/contacto.html
@@ -27,19 +27,19 @@
     <div>
         <ul class="menu">
             <li class="__menu">
-                <a href="index.html">INICIO</a>
+                <a  class="__menu" href="index.html">INICIO</a>
             </li>
             <li class="__menu">
-                <a href="nosotros.html">NOSOTROS</a>
+                <a  class="__menu" href="nosotros.html">NOSOTROS</a>
             </li>
             <li class="__menu">
-                <a href="catálogo.html">CATÁLOGO</a>
+                <a  class="__menu" href="catálogo.html">CATÁLOGO</a>
             </li>
             <li class="__menu">
-                <a href="tiendas.html">TIENDAS</a>
+                <a  class="__menu" href="tiendas.html">TIENDAS</a>
             </li>
             <li class="__menu">
-                <a href="contacto.html">CONTACTO</a>
+                <a  class="__menu" href="contacto.html">CONTACTO</a>
             </li>
         </ul> 
     </div>
@@ -69,7 +69,7 @@
 <footer>
     <section class="piedepacenter">
         <section class="linea2">
-            <h3>Centro de ayuda</h3>
+            <h3><strong>Centro de ayuda</strong></h3>
             <ul>
                 <li class="piedepa">Aviso de privacidad</li>
                 <li class="piedepa">Preguntas frecuentes</li>
@@ -77,7 +77,7 @@
             </ul>
         </section>
         <section class="linea2">
-            <h3>Contacto</h3>
+            <h3><strong>Contacto</strong></h3>
             <nav>
                 <ul>
                     <li class="piedepa">contacto</li>
@@ -95,7 +95,7 @@
             </nav>
         </section>
         <section class="linea2">
-            <h3>Medios de pago</h3>
+            <h3><strong>Medios de pago</strong></h3>
             <article>
                 <figure><img src="./img/American.png" alt=""></figure>
                 <figure><img src="./img/Diners.png" alt=""></figure>
