se ajusta tabular

--- a/contacto.html
+++ b/contacto.html
@@ -43,73 +43,73 @@
             </li>
         </ul> 
     </div>
-<main class="container">
-    <section class="comentarios">
-        <div>
-            <article class="comentarios1">
-                <p class="comentarios2">¡Hola! Gracias por comunicarte con nosotros, por favor déjanos el detalle de tu pregunta, novedad, o problema con el envío.</p>
-                <p class="comentarios2">Especificando todos tus datos del pedido, nombre, cédula, ciudad, el tu número de pedido que es un código de 5 dígitos que está junto con la información de tu compra. Todo lo que nos puedas proporcionar para ubicar mejor tu solicitud.</p>
-                <p class="comentarios2">Recuerda que la respuesta por este medio puede tardar entre 1-5 días hábiles sin contar sábados, domingos ni festivos, responderemos lo más pronto posible, y entre más concreto seas con la información de la novedad será más fácil y rápido darte solución.</p>
-                <p class="comentarios2">Si tienes alguna petición, queja o reclamo puedes escribirnos al siguiente correo servicioalcliente@fridabeautyshop.com.co</p>
-            </article>
-        </div>
-        <div>
-            <form action="index.js" method="post" enctype="">
-                <ul class="diligenciar">
-                    <li class="diligenciar1"><input type="text" name="Nombre" id="Nombre" placeholder="Nombre" ></li>
-                    <li class="diligenciar1"><input type="email" name="Correo electrónico" id="Correo electrónico" placeholder="Correo electrónico"></li>
-                    <li class="diligenciar1"><input type="number" name="Teléfono" id="Teléfono" placeholder="Número telefónico"></li>
-                    <li class="diligenciar1"><textarea type="text" name="Mensaje" id="Mensaje" cols="30" rows="10" placeholder="mensaje"></textarea></li>
-                    <li class="diligenciar1"><input type="submit" value="Enviar"></li>
-                </ul>
-            </form>
-        </div>
-    </section>
-</main>
-<footer>
-    <section class="piedepacenter">
-        <section class="linea2">
-            <h3><strong>Centro de ayuda</strong></h3>
-            <ul>
-                <li class="piedepa">Aviso de privacidad</li>
-                <li class="piedepa">Preguntas frecuentes</li>
-                <li class="piedepa">Políticas de devoluciones</li>
-            </ul>
+    <main class="container">
+        <section class="comentarios">
+            <div>
+                <article class="comentarios1">
+                    <p class="comentarios2">¡Hola! Gracias por comunicarte con nosotros, por favor déjanos el detalle de tu pregunta, novedad, o problema con el envío.</p>
+                    <p class="comentarios2">Especificando todos tus datos del pedido, nombre, cédula, ciudad, el tu número de pedido que es un código de 5 dígitos que está junto con la información de tu compra. Todo lo que nos puedas proporcionar para ubicar mejor tu solicitud.</p>
+                    <p class="comentarios2">Recuerda que la respuesta por este medio puede tardar entre 1-5 días hábiles sin contar sábados, domingos ni festivos, responderemos lo más pronto posible, y entre más concreto seas con la información de la novedad será más fácil y rápido darte solución.</p>
+                    <p class="comentarios2">Si tienes alguna petición, queja o reclamo puedes escribenos</p>
+                </article>
+            </div>
+            <div>
+                <form action="index.js" method="post" enctype="">
+                    <ul class="diligenciar">
+                        <li class="diligenciar1"><input type="text" name="Nombre" id="Nombre" placeholder="Nombre" ></li>
+                        <li class="diligenciar1"><input type="email" name="Correo electrónico" id="Correo electrónico" placeholder="Correo electrónico"></li>
+                        <li class="diligenciar1"><input type="number" name="Teléfono" id="Teléfono" placeholder="Número telefónico"></li>
+                        <li class="diligenciar1"><textarea type="text" name="Mensaje" id="Mensaje" cols="30" rows="10" placeholder="mensaje"></textarea></li>
+                        <li class="diligenciar1"><input type="submit" value="Enviar"></li>
+                    </ul>
+                </form>
+            </div>
         </section>
-        <section class="linea2">
-            <h3><strong>Contacto</strong></h3>
-            <nav>
+    </main>
+    <footer>
+        <section class="piedepacenter">
+            <section class="linea2">
+                <h3><strong>Centro de ayuda</strong></h3>
                 <ul>
-                    <li class="piedepa">contacto</li>
-                    <li class="piedepa">
-                        <a>
-                            <img src="./img/Instagram.png" alt="Instagram">
-                        </a>
-                    </li>
-                    <li class="piedepa">
-                        <a>
-                            <img src="./img/Facebook.png" alt="Facebook">
-                        </a>
-                    </li>
+                    <li class="piedepa">Aviso de privacidad</li>
+                    <li class="piedepa">Preguntas frecuentes</li>
+                    <li class="piedepa">Políticas de devoluciones</li>
                 </ul>
-            </nav>
+            </section>
+            <section class="linea2">
+                <h3><strong>Contacto</strong></h3>
+                <nav>
+                    <ul>
+                        <li class="piedepa">contacto</li>
+                        <li class="piedepa">
+                            <a>
+                                <img src="./img/Instagram.png" alt="Instagram">
+                            </a>
+                        </li>
+                        <li class="piedepa">
+                            <a>
+                                <img src="./img/Facebook.png" alt="Facebook">
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="linea2">
+                <h3><strong>Medios de pago</strong></h3>
+                <article>
+                    <figure><img src="./img/American.png" alt=""></figure>
+                    <figure><img src="./img/Diners.png" alt=""></figure>
+                    <figure><img src="./img/Mastercard.png" alt=""></figure>
+                    <figure><img src="./img/Visa.png" alt=""></figure>
+                </article>
+            </section>
         </section>
-        <section class="linea2">
-            <h3><strong>Medios de pago</strong></h3>
-            <article>
-                <figure><img src="./img/American.png" alt=""></figure>
-                <figure><img src="./img/Diners.png" alt=""></figure>
-                <figure><img src="./img/Mastercard.png" alt=""></figure>
-                <figure><img src="./img/Visa.png" alt=""></figure>
-            </article>
+        <section>
+            <div class="piedepa2">
+                <small>Copyright 2022 © <b>Frida Beauty Shop</b> / Todos los Derechos Reservados.</small>
+            </div>
         </section>
-    </section>
-    <section>
-    <div class="piedepa2">
-        <small>Copyright 2022 © <b>Frida Beauty Shop</b> / Todos los Derechos Reservados.</small>
-    </div>
-</section>
-</footer>
-<script src="./js/bootstrap.bundle.js"></script>
+    </footer>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
