ingreso de SASS, anidado

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="maquillaje, capilar, cuidado para la piel, sombras, tónico, brochas, belleza, desenredante, paleta de sombras, suero facial">
+    <meta name="description" content="Frida es una nueva alternativa para cuidar tu belleza, con todos los productos que necesitas para hacerlo posible.">
     <title>Frida Beauty Shop</title>
     <link rel="stylesheet" href="./CSS/bootstrap.css">
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/translated.css">
 
 
 </head>
@@ -24,7 +26,7 @@
             </section>
         </nav>
     </header>
-    <div>
+    <div>    
         <ul class="menu">
             <li class="__menu">
                 <a class="__menu" href="index.html">INICIO</a>
@@ -45,7 +47,7 @@
     </div>
     <div id="banner">
         <section>
-            <img src="./img/Banner.png" class="banner"  alt="">
+            <img src="./img/Banner.png" class="banner"  alt="banner">
         </section>
     </div>
     <main class="container">
