--- a/tiendas.html
+++ b/tiendas.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frida Beauty Shop</title>
+    <meta name="keywords" content="maquillaje, capilar, cuidado para la piel, sombras, tónico, brochas, belleza, desenredante, paleta de sombras, suero facial">
+    <meta name="description" content="Frida es una nueva alternativa para cuidar tu belleza, con todos los productos que necesitas para hacerlo posible.">
+    <title>Frida Beauty Shop - tiendas</title>
     <link rel="stylesheet" href="./CSS/bootstrap.css">
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/translated.css">
 
 
 </head>
