se agregan link de facebook e instagram

--- a/catálogo.html
+++ b/catálogo.html
@@ -16,8 +16,8 @@
         <nav class="navbar container">
             <section class="redeslogo">
                 <div class="redes">
-                    <a><img src="./img/Instagram.png" alt="Instagram"></a>
-                    <a><img src="./img/Facebook.png" alt="Facebook"></a>
+                    <a title="Instagram" href="https://instagram.com/frida.beautyshop?igshid=YmMyMTA2M2Y=" target="_blank"><img src="./img/Instagram.png" alt="Instagram"></a>
+                    <a title="Facebook" href="https://www.facebook.com/profile.php?id=100063732863760" target="_blank"><img src="./img/Facebook.png" alt="Facebook"></a>
                 </div>
                 <div>
                     <a href="index.html"><img src="./img/Logo.png" alt="Logo"></a> 
@@ -125,24 +125,24 @@
         <section class="piedepacenter">
             <section class="linea2">
                 <h3><strong>Centro de ayuda</strong></h3>
-                <ul>
-                    <li class="piedepa">Aviso de privacidad</li>
-                    <li class="piedepa">Preguntas frecuentes</li>
-                    <li class="piedepa">Políticas de devoluciones</li>
+                <ul class="piedepa">
+                    <li>Aviso de privacidad</li>
+                    <li>Preguntas frecuentes</li>
+                    <li>Políticas de devoluciones</li>
                 </ul>
             </section>
             <section class="linea2">
                 <h3><strong>Contacto</strong></h3>
                 <nav>
-                    <ul>
-                        <li class="piedepa">contacto</li>
-                        <li class="piedepa">
-                            <a>
+                    <ul class="piedepa">
+                        <li>contacto</li>
+                        <li>
+                            <a title="Instagram" href="https://instagram.com/frida.beautyshop?igshid=YmMyMTA2M2Y=" target="_blank">
                                 <img src="./img/Instagram.png" alt="Instagram">
                             </a>
                         </li>
-                        <li class="piedepa">
-                            <a>
+                        <li>
+                            <a title="Facebook" href="https://www.facebook.com/profile.php?id=100063732863760" target="_blank">
                                 <img src="./img/Facebook.png" alt="Facebook">
                             </a>
                         </li>
