ajuste enlace contacto en pie de pagina y SEO

--- a/catálogo.html
+++ b/catálogo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="maquillaje, capilar, cuidado para la piel, sombras, tónico, brochas, belleza, desenredante, paleta de sombras, suero facial">
-    <meta name="description" content="Frida es una nueva alternativa para cuidar tu belleza, con todos los productos que necesitas para hacerlo posible.">
+    <meta name="keywords" content="maquillaje, capilar, cuidado para la piel, desenredante, Tónico, paleta de sombras, suero facial">
+    <meta name="description" content=" los mejores productos capilar, maquillaje y cuidado para la piel">
     <title>Frida Beauty Shop - catálogo</title>
     <link rel="stylesheet" href="./CSS/bootstrap.css">
     <link rel="stylesheet" href="./CSS/translated.css">
@@ -135,7 +135,9 @@
                 <h3><strong>Contacto</strong></h3>
                 <nav>
                     <ul class="piedepa">
-                        <li>contacto</li>
+                        <li>
+                            <a class="piedepacontacto" href="contacto.html">contacto</a>
+                        </li>
                         <li>
                             <a title="Instagram" href="https://instagram.com/frida.beautyshop?igshid=YmMyMTA2M2Y=" target="_blank">
                                 <img src="./img/Instagram.png" alt="Instagram">
