--- a/nosotros.html
+++ b/nosotros.html
@@ -81,7 +81,9 @@
                 <h3><strong>Contacto</strong></h3>
                 <nav>
                     <ul class="piedepa">
-                        <li>contacto</li>
+                        <li>
+                            <a class="piedepacontacto" href="contacto.html">contacto</a>
+                        </li>
                         <li>
                             <a title="Instagram" href="https://instagram.com/frida.beautyshop?igshid=YmMyMTA2M2Y=" target="_blank">
                                 <img src="./img/Instagram.png" alt="Instagram">
