--- a/tiendas.html
+++ b/tiendas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="maquillaje, capilar, cuidado para la piel, sombras, tónico, brochas, belleza, desenredante, paleta de sombras, suero facial">
-    <meta name="description" content="Frida es una nueva alternativa para cuidar tu belleza, con todos los productos que necesitas para hacerlo posible.">
+    <meta name="description" content="visita nuestras tiendas para tener el gusto de atenderte">
     <title>Frida Beauty Shop - tiendas</title>
     <link rel="stylesheet" href="./CSS/bootstrap.css">
     <link rel="stylesheet" href="./CSS/translated.css">
@@ -96,7 +96,9 @@
                 <h3><strong>Contacto</strong></h3>
                 <nav>
                     <ul class="piedepa">
-                        <li>contacto</li>
+                        <li>
+                            <a class="piedepacontacto" href="contacto.html">contacto</a>
+                        </li>
                         <li>
                             <a title="Instagram" href="https://instagram.com/frida.beautyshop?igshid=YmMyMTA2M2Y=" target="_blank">
                                 <img src="./img/Instagram.png" alt="Instagram">
